--- a/samples/.gitignore
+++ b/samples/.gitignore
@@ -1,2 +1,45 @@
+# Gradle
+# ------
 .gradle/
 build/
+
+# IDEA
+# ----
+.idea
+.shelf
+*.iml
+*.ipr
+*.iws
+out/
+
+# Vim
+# ---
+*.sw[op]
+
+# Emacs
+# -----
+*~
+
+# Textmate
+# --------
+.textmate
+
+# Sublime Text
+# ------------
+*.sublime-*
+
+# jEnv
+# ----
+.java-version
+
+# OS X
+# ----
+.DS_Store
+
+# HPROF
+# -----
+*.hprof
+
+# Logs
+# ----
+*.log
