Use Gradle repo

--- a/samples/02-use-cache-backend/hazelcast-test/init-hazelcast.gradle
+++ b/samples/02-use-cache-backend/hazelcast-test/init-hazelcast.gradle
@@ -1,6 +1,6 @@
 initscript {
 	repositories {
-		maven { url "https://lptr.github.io/gradle-hazelcast-plugin/repo/" }
+		maven { url "https://gradle.github.io/gradle-hazelcast-plugin/repo/" }
 	    mavenCentral()
 	}
 
