Added multi-threaded hashing benchmark

--- a/benchmark/build.gradle
+++ b/benchmark/build.gradle
@@ -9,7 +9,9 @@ buildscript {
     }
 }
 
-apply plugin: "idea"
+allprojects {
+    apply plugin: "idea"
+}
 
 subprojects {
     apply plugin: "me.champeau.gradle.jmh"
