Add missing file stats benchmark

--- a/benchmark/settings.gradle
+++ b/benchmark/settings.gradle
@@ -1,3 +1,4 @@
 include "benchmark-hash-functions"
 include "benchmark-hash-multi-thread"
+include "benchmark-missing-file-stats"
 include "benchmark-string-encoding"
