--- a/samples/03-use-http-backend/http-test/init-http.gradle
+++ b/samples/03-use-http-backend/http-test/init-http.gradle
@@ -1,7 +1,5 @@
 import org.gradle.cache.tasks.http.HttpTaskOutputCacheFactory
 
-gradle {
-	taskCaching {
-		useCacheFactory(new HttpTaskOutputCacheFactory())
-	}
+gradle.taskCaching {
+  useCacheFactory(new HttpTaskOutputCacheFactory())
 }
