--- a/samples/03-use-http-backend/http-test/build.gradle
+++ b/samples/03-use-http-backend/http-test/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: "java"
 apply plugin: "application"
 
+repositories {
+  mavenCentral()
+}
+
 dependencies {
   compile 'junit:junit:4.12'
 }
