--- a/samples/03-use-http-backend/http-test/init-http.gradle
+++ b/samples/03-use-http-backend/http-test/init-http.gradle
@@ -1,4 +1,4 @@
-import org.gradle.cache.http.HttpBuildCacheFactory
+import org.gradle.caching.http.internal.HttpBuildCacheFactory
 
 gradle.buildCache {
   useCacheFactory(new HttpBuildCacheFactory())
